Bug 153587 - Some keyboard shortcuts not always match the assigned in keyboard shortcuts dialog.
Summary: Some keyboard shortcuts not always match the assigned in keyboard shortcuts d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
: 80914 (view as bug list)
Depends on:
Blocks: Customize-Dialog-Keyboard
  Show dependency treegraph
 
Reported: 2023-02-13 12:04 UTC by Juergen Funk
Modified: 2025-10-25 20:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of customise dialog (67.43 KB, image/jpeg)
2023-11-05 12:22 UTC, Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2023-02-13 12:04:34 UTC
I found this behavior when I had solved the bug tdf#95936

Edit->Find and Replace... it show the Shortcut "STRG+H" but in 
Tools->Customize->Keyboard
the "STRG+H" ist not set, in German is set with "STRG+Alt+F" and it works.

The same is with Find "STRG+F" however the function "Find" is not in the list


In this context:
go to
Tools->Customize->Keyboard
 - in ListBox-function find "Formating Marks" it show "STRG+F10"
 - add a second Shortcut e.g. "STRG+6"
 - Button "Ok"

Now (with the patch from tdf#95936) the tooltip on the Toolbars and the View-Menu show the shortcut "STRG+6"
 - Now got to Customize and delete the "CTRL+6", 
    but the Shortcut "CTRL+F10" is still present.
 - Button "Ok"
Now (with the patch from tdf#95936) the tooltip in the toolbars and in the view-menu does NOT show a shortcut, it should actually show "CTRL+10".
Only when LO is restarted, "CTRL+F10" is displayed again.
Comment 1 Juergen Funk 2023-03-01 04:32:59 UTC
For Part 2 patch https://gerrit.libreoffice.org/c/core/+/147093
Comment 2 Dieter 2023-03-05 11:30:16 UTC
I think, I can confirm the problem

Steps:
1. Open new document
2. Strg+H opens Find & Replace Dialog (close)
3. Options -> Customize -> Keyboard
4. Activate Shortcut key dropdown list and press Strg+H

Actual result:
Strg+H has not command entry

Expected result:
Strg+H should have "Find and Replace" as command entry

additional information:
Same with Strg+F
Comment 3 Commit Notification 2023-03-20 11:38:06 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6dffdf014127af23b0b20b1015a4b6fdf0e1ac9

tdf#153587 If one of the multiple shortcuts is deleted,

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-05-04 06:15:49 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6af287527d42f8cf4bc43047fe0ed6130420d6b

tdf#153587 Display CTRL+F in the keyboard shortcuts list

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Juergen Funk 2023-05-10 11:59:05 UTC
The patch above in Comment 4 fixes part 1 of the bug, however I have undone the display of the CTRL-F with this patch https://gerrit.libreoffice.org/c/core/+/151503 .
For this there is another bug report here tdf#155189
Comment 6 Maxim Monastirsky 2023-05-11 22:12:02 UTC
*** Bug 80914 has been marked as a duplicate of this bug. ***
Comment 7 Thorsten Behrens (allotropia) 2023-09-04 12:27:41 UTC
Seems fixed to me, for the parts that are possible
Comment 8 Dieter 2023-11-05 12:22:40 UTC
Created attachment 190656 [details]
Screenshot of customise dialog

Still no entries for Strg+H and Strg+F in shortcut keys list

Tested with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c0c8cffd3541e3cd616c96791b04e7ebf2b2ed03
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

=> REOPENED
Comment 9 Gabor Kelemen (Collabora) 2024-12-13 16:30:49 UTC
unassigning due to inactivtiy
Comment 10 Justin L 2025-10-25 20:25:26 UTC
Ctrl-F and Ctrl-H are defined for the entire LibreOffice, not in the Writer-only module.